--- a/build
+++ b/build
@@ -11,7 +11,7 @@ SSD: https://www.amazon.ca/Green-1TB-Internal-SSD-WDS100T2G0A/dp/B07NNRTTCM/ref=
 Optionals
 CoolerAlt: https://www.amazon.ca/DEEPCOOL-Anti-Leak-Stainless-Controller-Motherboard/dp/B07WNNH4Q1/ref=sr_1_1?crid=HO68HDD6G17Y&keywords=deepcool+captain+240+pro+v2&qid=1588088760&s=electronics&sprefix=deepcool+captain%2Celectronics%2C152&sr=1-1
 led strips: https://www.amazon.ca/EZDIY-FAB-Computer-Addressable-Controller-Compatible/dp/B07SB2TY5D/ref=sr_1_4?keywords=rgb+led+strip+lights&qid=1588092150&s=electronics&sr=1-4
-HDD: https://www.amazon.ca/Seagate-Barracuda-Internal-Drive-3-5-Inch/dp/B07H2RR55Q/ref=sr_1_3?keywords=1tb+hdd&qid=1588089581&s=electronics&sr=1-3
+Games drive: https://www.amazon.ca/Seagate-Barracuda-Internal-Drive-3-5-Inch/dp/B07H2RR55Q/ref=sr_1_3?keywords=1tb+hdd&qid=1588089581&s=electronics&sr=1-3
 Keyboard: https://www.amazon.ca/PICTEK-Mechanical-Multimedia-Anti-Ghosting-Water-Resistant/dp/B07ZJ9LMRY/ref=sr_1_30?crid=2BZ2OHEPUS9FF&keywords=rgb%2Bmechanical%2Bkeyboard&qid=1588093219&sprefix=rgb%2Bmechani%2Caps%2C1095&sr=8-30&th=1
 Mouse: https://www.amazon.ca/Logitech-910-005728-G502-Hero-SE/dp/B07PHLBBQR/ref=sr_1_1?keywords=logitech+g502+se&qid=1588094411&sr=8-1
 Mouse pad: https://www.amazon.ca/JIALONG-Extended-900x400mm-Mousepad-Stitched/dp/B01N2FZRSF/ref=sr_1_2?keywords=JIALONG+gaming+and+office+mouse+pad+900x400&qid=1588094434&sr=8-2
